--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/ZhangWei-KUMO/voyager-cross#readme",
   "dependencies": {
     "archy": "^1.0.0",
+    "chalk": "^3.0.0",
     "colors": "^1.4.0",
+    "figlet": "^1.2.4",
     "lodash": "^4.17.15"
   }
 }
