--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "colors": "^1.4.0",
     "commander": "^4.0.1",
     "figlet": "^1.2.4",
-    "lodash": "^4.17.15"
+    "fs-extra": "^8.1.0",
+    "lodash": "^4.17.15",
+    "map-stream": "^0.0.7",
+    "vinyl-fs": "^3.0.3"
   }
 }
