--- a/template/package.json
+++ b/template/package.json
@@ -8,6 +8,28 @@
   },
   "dependencies": {
     "react": "16.4.2",
-    "express": "4.16.3"
-  }
+    "express": "4.16.3",
+    "express-session": "1.15.6",
+    "glob": "^7.1.6",
+    "next": "7.0.2",
+    "next-nprogress": "1.4.0",
+    "next-routes": "^1.4.2",
+    "nodemon": "1.18.3",
+    "request": "2.88.0",
+    "isomorphic-unfetch": "^3.0.0",
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.5",
+    "@zeit/next-bundle-analyzer": "0.1.2",
+    "@zeit/next-css": "1.0.1",
+    "babel-plugin-import": "^1.12.0",
+    "mini-css-extract-plugin": "^0.6.0",
+    "webpack": "^4.4.0",
+    "webpack-filter-warnings-plugin": "^1.2.1"
+  },
 }
