--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "voyager": "./bin/voyager.js"
   },
   "scripts": {
-    "test": "node ./bin/voyager.js"
+    "test": "node ./bin/voyager.js -i __test__"
   },
   "repository": {
     "type": "git",
